# fastapiex-di

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/fastapiex/di/: __init__.py  activator.py  base.py  bootstrap.py  constants.py  container.py  contracts.py  discovery.py  errors.py  injection.py  install.py  planner.py  registry.py  types.py
tests/: test_container.py  test_install.py  test_registry.py  test_regressions.py
tests/di_global_services/: __init__.py  late.py  main.py
tests/di_test_services/: __init__.py  _late_private.py  helpers.py  main.py
