[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fastapiex-di"
version = "1.0.0"
description = "DI extension for FastAPIEX"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Henri" }
]
maintainers = [
  { name = "Henri" }
]
keywords = [
  "fastapi",
  "dependency-injection",
  "service-registry",
  "asgi",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.110,<1.0",
  "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/ArakawaHenri/fastapiex-di"
Repository = "https://github.com/ArakawaHenri/fastapiex-di"
Issues = "https://github.com/ArakawaHenri/fastapiex-di/issues"
Security = "https://github.com/ArakawaHenri/fastapiex-di/blob/main/SECURITY.md"

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]
security = [
  "pip-audit>=2.8.0",
  "cyclonedx-bom>=4.1.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["src", "."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py312"
include = ["src/**/*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = [
  "B008", # FastAPI Depends in defaults
]

[tool.mypy]
files = ["src"]
strict = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "tests",
  "LICENSE",
  "README.md",
  "SECURITY.md",
  "scripts",
  "pyproject.toml",
  "uv.lock",
]
